--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,18 @@ body {
   color: #444444;
 }
 
+.faq-link{
+  color: #000270 !important;
+}
+
+.card-header{
+  background-color: #ffffff !important;
+}
+
+.bg-light{
+  background-color: #fff !important;
+}
+
 a {
   color: #ffc451;
 }
@@ -32,6 +44,11 @@ h1, h2, h3, h4, h5, h6 {
 
 .card-img-top{
   width: 100% !important;
+}
+
+.news-paragraph{
+  color: black;
+  font-weight: 400;
 }
 
 /*--------------------------------------------------------------
@@ -152,6 +169,10 @@ h1, h2, h3, h4, h5, h6 {
 
 #header .logo img {
   max-height: 40px;
+}
+
+.nav-link{
+  color: #000000 !important;
 }
 
 /*--------------------------------------------------------------
@@ -405,7 +426,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("https://images.pexels.com/photos/936043/pexels-photo-936043.jpeg?cs=srgb&dl=pexels-nappy-936043.jpg&fm=jpg") top center;
+  background: url("https://images.unsplash.com/photo-1587149185211-28a2ef4c9a10?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80") top center;
   background-size: cover;
   position: relative;
 }
@@ -937,7 +958,7 @@ section {
 }
 
 .counts .image {
-  background: url("../img/counts-img.jpg") center center no-repeat;
+  background: url("https://images.unsplash.com/photo-1427751840561-9852520f8ce8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60") center center no-repeat;
   background-size: cover;
   min-height: 400px;
 }
