--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -432,7 +432,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("https://images.unsplash.com/photo-1587149185211-28a2ef4c9a10?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80") top center;
+  background: url("https://images.pexels.com/photos/2381069/pexels-photo-2381069.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940") top center;
   background-size: cover;
   position: relative;
 }
